# Cdeck

./: Cyber-Deck.bat  Dev Cyber-Deck.bat  HANDOFF — Juil 2025.md  PDD Cyber-Deck V2.md  PIVOT V3 — Notes First.md  PIVOT V3.1 — Framing acté.md  README.md  REPRISE.md  launch.ps1  package-lock.json  package.json
.cursor/rules/: cyber-deck-audio.mdc  cyber-deck-notes.mdc  cyber-deck-pdd-core.mdc  cyber-deck-ui.mdc
audio-spike/: Cargo.toml
audio-spike/src/: main.rs
notes/: README.md
src/: ambient.js  app.js  audio-reactive.js  crt.js  index.html  markdown.js  proximity.js  radar-gl.js  space.js  tauri-shim.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  galaxy.rs  lib.rs  main.rs  notes.rs  window.rs
src-tauri/src/audio/: device.rs  fft.rs  loopback.rs  mod.rs
src/styles/: components.css  effects.css  glass.css  main.css  pivot-v3.css  tokens.css  typography.css
