[package]
name = "cyber-deck"
version = "0.1.0"
description = "Cyber-Deck — compagnon de concentration pour second écran"
authors = ["Ben"]
edition = "2021"

[lib]
name = "cyber_deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2"
wasapi = "0.19"
rustfft = "6"
realfft = "3"
